# utils

./: LICENSE.txt  README.md  pyproject.toml
src/utils/: __about__.py  points.py  vectors.py
tests/: __init__.py  test_vectors.py
